# Repo_Flint

./: README.md  Space-separated_input_before_line_break.txt
Studing/Computational_Mathematics/: Ejler.cpp  Ejler_read.txt  Krivencova_Didenko_lab.docx  Readme  SFMLread.txt  a.out  main.cpp  main_sfml.cpp  makefile  sfml-app
Studing/Computational_Mathematics/logs/: HyunMethod  logsAnalytic  logsEjler
Studing/Game_OOP/: CMakeLists.txt  Makefile  main.cpp
Studing/Game_OOP/Cell/: Cell.cpp  Cell.h  Cell_interface.h
Studing/Game_OOP/Field/: Field.cpp  Field.h
Studing/Game_OOP/Game/: Commands.h  Conditions.h  Game.cpp  Game.h  Size_cell.h
Studing/Game_OOP/Game/Cell/: Cell.cpp  Cell.h  Cell_interface.h
Studing/Game_OOP/Game/Cell/Object/: Object.cpp  Object.h  Object_view.cpp  Object_view.h
Studing/Game_OOP/Game/Cell/Object/Character/: Character.cpp  Character.h
Studing/Game_OOP/Game/Cell/Object/Character/Enemy/: Enemy.cpp  Enemy.h
Studing/Game_OOP/Game/Cell/Object/Character/Enemy/Increase_enemy/: Increase_enemy.cpp  Increase_enemy.h
Studing/Game_OOP/Game/Cell/Object/Character/Enemy/Reproduce_enemy/: Reproduce_enemy.cpp  Reproduce_enemy.h
Studing/Game_OOP/Game/Cell/Object/Character/Enemy/Simple_enemy/: Simple_enemy.cpp  Simple_enemy.h
Studing/Game_OOP/Game/Cell/Object/Character/Enemy/Type1/: Type1.cpp  Type1.h
Studing/Game_OOP/Game/Cell/Object/Character/Enemy/Type2/: Type2.cpp  Type2.h
Studing/Game_OOP/Game/Cell/Object/Character/Enemy/Type3/: Type3.cpp  Type3.h
Studing/Game_OOP/Game/Cell/Object/Character/Player/: Player.cpp  Player.h
Studing/Game_OOP/Game/Cell/Object/Empty/: Empty.cpp  Empty.h
Studing/Game_OOP/Game/Cell/Object/Enter/: Enter.cpp  Enter.h
Studing/Game_OOP/Game/Cell/Object/Equipment/: Equipment.cpp  Equipment.h  Equipment_interface.h
Studing/Game_OOP/Game/Cell/Object/Equipment/Armor/: Armor.cpp  Armor.h
Studing/Game_OOP/Game/Cell/Object/Equipment/Health/: Health.cpp  Health.h
Studing/Game_OOP/Game/Cell/Object/Equipment/Weapon/: Weapon.cpp  Weapon.h
Studing/Game_OOP/Game/Cell/Object/Exit/: Exit.cpp  Exit.h
Studing/Game_OOP/Game/Cell/Object/Pathless/: Pathless.cpp  Pathless.h
Studing/Game_OOP/Game/Command/: Command.cpp  Command.h
Studing/Game_OOP/Game/Field/: Field.cpp  Field.h  Field.h.gch
Studing/Game_OOP/Game/Field/Field_view/: Field_view.cpp  Field_view.h
Studing/Game_OOP/Game/Iterator/: Iterator.cpp  Iterator.h
Studing/Game_OOP/Game/Logger/: Logger.cpp  Logger.h
Studing/Game_OOP/Game/Mediator/: Mediator.cpp  Mediator.h
Studing/Game_OOP/Game/Mediator/MoveCharacter/: MoveCharacter.cpp  MoveCharacter.h
Studing/Game_OOP/Game/Move/: Mover.cpp  Mover.h
Studing/Game_OOP/Game/Observer/: IObserver.cpp  IObserver.h
Studing/Game_OOP/Game/src/SFML-2.5.1/share/SFML/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clipboard_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Cursor_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  GpuPreference_8hpp.html  GpuPreference_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  (+372 more)
Studing/Game_OOP/Iterator/: Iterator.cpp  Iterator.h
testJS/: App.css  App.js  consts.js  index.html  index.js
testJS/src/Components/ContainerTable/: Container_table.js
testJS/src/Components/ContainerTable/pages_table/: Div_pages_table.css  Div_pages_table.js  choicePage.js
testJS/src/Components/ContainerTable/showed_columns/: Div_showed_columns.css  Div_showed_columns.js
testJS/src/Components/ContainerTable/table/: Table.js  table.css
testJS/src/Components/EditRow/: divEdit.css  divEdit.js
testJS/store/: choicePageReducer.js  editReducer.js  sortTableReducer.js  store.js
(+4 files in other folders)
